# myanmar-location

./: .gitignore  LICENSE  MANIFEST.IN  README.md  location.py  mimu_district.csv  mimu_township.csv  mimu_villagetract.csv  pyproject.toml  setup.py
source-data/: mimu_stateregion.csv
src/myanmar-location/: location.py  utils.py
src/myanmar_location/: __init__.py  _types.py  location.py  utils.py
