[project]
name = "myanmar-location"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "setuptools>=79.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
